examples/datalog/10_edge_cases/09_empty_aggregation.dl.out
Executing script: examples/datalog/10_edge_cases/09_empty_aggregation.dl

> .db create test_empty_agg
Database 'test_empty_agg' created.
Switched to database: test_empty_agg
> .db use test_empty_agg
Switched to database: test_empty_agg
> +total(count<x>) :- sales(X, _).
Script error: Line 12: Parse error: Invalid term: 'count<x>'
